fixed login swagger comment
