# routes/users.js
@@ -14,7 +14,7 @@ router.post("/login", async (req, res, next) => {
   #swagger.parameters['body'] = { "name": "body", in: 'body', required: true, description: 'User email and password', type: 'object', schema: {$ref: "#/definitions/UserBodyLogin"} }
   #swagger.consumes = ["application/json"]
   #swagger.produces = ["application/json"] 
-  #swagger.responses[200] = {description: 'You are logged in', schema: {status: "success", data: {statusCode: 200, result: {id: 1, name: "tester", token: "token" }}}
+  #swagger.responses[200] = {description: 'You are logged in', schema: {status: "success", data: {statusCode: 200, result: {id: 1, name: "test", token: "token"}}}}
   #swagger.responses[400] = {description: 'Incorrect email or password', schema: {status: "fail", data: {statusCode: 400, result: "Incorrect email or password"}}}
   #swagger.responses[500] = {description: 'Internal server error', schema: {status: "error", message: "Internal server error", data: {}}}
   */
